[package]
name = "stm32f103-lcd-hd44780"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"cortex-m" = { version = "0.7.7", features = ["critical-section-single-core"] }
"cortex-m-rt" = "0.7.3"
"panic-halt" = "0.2.0"
"stm32f1" = { version = "0.15.1", features = ["stm32f103"]}
"libm" = "0.2.8"
[dependencies.emballoc]
version = "0.3.0"